--- a/src/main/res/layout/activity_splash.xml
+++ b/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/splash_bg"
-    tools:context="com.greetty.appmanage.activity.SplashActivity">
+    android:background="@mipmap/splash_1"
+    tools:context=".ui.activity.SplashActivity">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.greetty.appmanage.view.CircleProgressbar
+            android:id="@+id/tv_red_skip"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="15dp"
+            android:text="跳过"
+            android:textColor="#ffffff"
+            android:textSize="12sp"/>
+
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
