--- a/src/main/res/layout/activity_splash.xml
+++ b/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
-        android:background="@mipmap/splash_1"
         android:layout_height="match_parent" />
 
     <ScrollView
@@ -26,7 +25,7 @@
             android:layout_gravity="right"
             android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
-            android:text="跳过"
+            android:text="@string/skip"
             android:textSize="10sp"/>
 
     </ScrollView>
