--- a/src/main/res/layout/fragment_unlocked_app.xml
+++ b/src/main/res/layout/fragment_unlocked_app.xml
@@ -3,10 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_unlock_list"
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:text="未加锁应用"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
