--- a/src/main/res/layout/dialog_save_loading.xml
+++ b/src/main/res/layout/dialog_save_loading.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="260dp"
     android:background="#000000"
     android:layout_height="wrap_content"
-    android:paddingLeft="50dp"
+    android:paddingLeft="30dp"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
-    android:layout_marginLeft="50dp"
-    android:layout_marginRight="30dp"
     android:orientation="horizontal">
 
     <ProgressBar
@@ -18,9 +16,9 @@
         android:layout_marginLeft="30dp"
         android:gravity="center_vertical"
         android:id="@+id/dialog_tv_tip"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginRight="20dp"
         android:text="数据加载中，请稍后"
         android:textColor="#FFFFFF" />
 
